--- a/page2/index.html
+++ b/page2/index.html
@@ -12,7 +12,7 @@
     <title>SRI</title>
   </head>
   <body>
-    <h1 class="text-center mt-3">huruf konsonan</h1>
+    <h1 class="text-center mt-3">Mengenal huruf konsonan</h1>
     <hr />
     <div class="container">
       <div class="row d-flex justify-content-around">
