--- a/page3/buas.html
+++ b/page3/buas.html
@@ -13,7 +13,7 @@
     <title>SRI</title>
   </head>
   <body class="buas">
-    <h1 class="mt-4 text-center">hewan ternak</h1>
+    <h1 class="mt-4 text-center">hewan buas</h1>
     <hr />
     <div class="container">
       <div class="row">
