--- a/page3/ternak.html
+++ b/page3/ternak.html
@@ -19,22 +19,29 @@
       <div class="row">
         <div class="col-6 border-end border-dark">
           <div class="sound-card d-flex align-items-center flex-column">
-            <i class="bi bi-volume-down-fill"></i>
-            <div class="wrapper"></div>
-            <div class="text mt-3"></div>
+            <button onclick="playSound()" class="bg-transparent" style="border: none;">
+              <i class="bi bi-volume-down-fill"></i>
+            </button>
+            <div class="wrapper mb-4">
+              <img src="./assets/img/goat.png" class="img-thumbnail visually-hidden" id="img" alt="" />
+            </div>
+            <div class="text mt-4">
+              <h1 class="visually-hidden" style="text-align: center;" id="desc">Kambing</h1>
+            </div>
           </div>
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
           <div class="img-card">
-            <img src="img/dog.png" class="img-fluid p-1" alt="" />
-            <img src="img/cat.png" class="img-fluid p-1" alt="" />
-            <img src="img/goat.png" class="img-fluid p-1" alt="" />
-            <img src="img/cat.png" class="img-fluid p-1" alt="" />
-            <img src="img/cow.png" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/dog.png" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/cat.png" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/goat.png" onclick="showImage()" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/cat.png" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/cow.png" class="img-fluid p-1" alt="" />
           </div>
         </div>
       </div>
     </div>
+    <audio id="audio" src="./assets/sounds/kambing.mpeg"></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
