--- a/project-sri-match/index.html
+++ b/project-sri-match/index.html
@@ -7,18 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <main style="display:flex;justify-content:center;align-items:center">
+    <div style="display:flex;justify-content:center;align-items:center">
         <div style="display: flex;flex-direction: column">
             <div style="display: flex; align-items: center;">
-                <img src="./assets/anjing.png" style="width:100px;"/>
-                <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
-            </div>
-            <div style="display: flex; align-items: center;">
-                <img src="./assets/kucing.png" style="width:100px;"/>
-                <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
-            </div>
-            <div style="display: flex; align-items: center;">
-                <img src="./assets/kebo.png" style="width:100px;"/>
+                <img src="./assets/orangutan.jpg" style="width:100px;"/>
                 <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
             </div>
             <div style="display: flex; align-items: center;">
@@ -26,7 +18,15 @@
                 <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
             </div>
             <div style="display: flex; align-items: center;">
-                <img src="./assets/buaya.png" style="width:100px;"/>
+                <img src="./assets/elang.png" style="width:100px;"/>
+                <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
+            </div>
+            <div style="display: flex; align-items: center;">
+                <img src="./assets/ayam.png" style="width:100px;"/>
+                <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
+            </div>
+            <div style="display: flex; align-items: center;">
+                <img src="./assets/ikan.png" style="width:100px;"/>
                 <input type="checkbox" class="satu" name="satu" id="satu" style="margin-bottom: 20px;">
             </div>
         </div>
@@ -35,27 +35,13 @@
             <div style="display: flex; align-items: center;">
                 <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
                 <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
-                    <h1 style="text-align: center;">B</h1>
-                </div>
-            </div>
-            <div style="display: flex; align-items: center;">
-                <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
-                <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
-                    <h1 style="text-align: center;">Ke</h1>
-                </div>
-            </div>
-            
-            <div style="display: flex; align-items: center;">
-                <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
-                <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
                     <h1 style="text-align: center;">A</h1>
                 </div>
             </div>
-            
             <div style="display: flex; align-items: center;">
                 <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
                 <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
-                    <h1 style="text-align: center;">ku</h1>
+                    <h1 style="text-align: center;">I</h1>
                 </div>
             </div>
             <div style="display: flex; align-items: center;">
@@ -64,8 +50,20 @@
                     <h1 style="text-align: center;">U</h1>
                 </div>
             </div>
+            <div style="display: flex; align-items: center;">
+                <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
+                <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
+                    <h1 style="text-align: center;">E</h1>
+                </div>
+            </div>
+            <div style="display: flex; align-items: center;">
+                <input type="checkbox" class="dua" name="dua" id="dua" style="margin-bottom: 20px;">
+                <div style="width: 100px;border-width: 1px;border-color: gray;border: solid;">
+                    <h1 style="text-align: center;">O</h1>
+                </div>
+            </div>
         </div>
-    </main>
+    </div>
 
     <script src="script.js"></script>
 </body>
