add logic drag and drop

--- a/tebak-gambar/index.html
+++ b/tebak-gambar/index.html
@@ -15,18 +15,18 @@
     <h1 class="mt-4 text-center">TEBAK GAMBAR</h1>
     <div class="bg mx-auto position-relative mb-5">
       <img src="img/bg.jpg" alt="" class="d-block mx-auto w-100" />
-      <img src="img/bird-white.png" class="animal-white bird-white position-absolute" alt="" />
-      <img src="img/horse-white.png" class="animal-white horse-white position-absolute" alt="" />
-      <img src="img/buffalo-white.png" class="animal-white buffalo-white position-absolute" alt="" />
-      <img src="img/goat-white.png" class="animal-white goat-white position-absolute" alt="" />
-      <img src="img/dog-white.png" class="animal-white dog-white position-absolute" alt="" />
+      <img src="img/bird-white.png" class="bird animal-white bird-white position-absolute dropable" alt="" />
+      <img src="img/horse-white.png" class="horse animal-white horse-white position-absolute dropable" alt="" />
+      <img src="img/buffalo-white.png" class="buffalo animal-white buffalo-white position-absolute dropable" alt="" />
+      <img src="img/goat-white.png" class="goat animal-white goat-white position-absolute dropable" alt="" />
+      <img src="img/dog-white.png" class="dog animal-white dog-white position-absolute dropable" alt="" />
     </div>
     <div class="container d-flex justify-content-between">
-      <img src="img/bird.png" class="animal-color" alt="" />
-      <img src="img/buffalo.png" class="animal-color" alt="" />
-      <img src="img/dog.png" class="animal-color" alt="" />
-      <img src="img/goat.png" class="animal-color" alt="" />
-      <img src="img/horse.png" class="animal-color" alt="" />
+      <img src="img/bird.png" class="animal-color dragable" alt="bird" />
+      <img src="img/buffalo.png" class="animal-color dragable" alt="buffalo" />
+      <img src="img/dog.png" class="animal-color dragable" alt="dog" />
+      <img src="img/goat.png" class="animal-color dragable" alt="goat" />
+      <img src="img/horse.png" class="animal-color dragable" alt="horse" />
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="script.js"></script>
