--- a/page3/buas.html
+++ b/page3/buas.html
@@ -26,11 +26,11 @@
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
           <div class="img-card">
-            <img src="img/crocodile.png" class="img-fluid p-1" alt="" />
-            <img src="img/lion.png" class="img-fluid p-1" alt="" />
-            <img src="img/tiger.png" class="img-fluid p-1" alt="" />
-            <img src="img/snake.png" class="img-fluid p-1" alt="" />
-            <img src="img/panda.png" class="img-fluid p-1" alt="" />
+            <img src="assets/img/crocodile.png" class="img-fluid p-1" alt="" />
+            <img src="assets/img/lion.png" class="img-fluid p-1" alt="" />
+            <img src="assets/img/tiger.png" class="img-fluid p-1" alt="" />
+            <img src="assets/img/snake.png" class="img-fluid p-1" alt="" />
+            <img src="assets/img/panda.png" class="img-fluid p-1" alt="" />
           </div>
         </div>
       </div>
