update suara hewan

--- a/page3/buas.html
+++ b/page3/buas.html
@@ -22,6 +22,8 @@
             <i class="bi bi-volume-down-fill"></i>
             <div class="wrapper"></div>
             <div class="text mt-3"></div>
+            <div class="per-world">Kambing</div>
+            <div class="per-syllable">Kam-bing</div>
           </div>
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
