--- a/page3/ternak.html
+++ b/page3/ternak.html
@@ -19,15 +19,17 @@
       <div class="row">
         <div class="col-6 border-end border-dark">
           <div class="sound-card d-flex align-items-center flex-column">
-            <button onclick="playSound()" class="bg-transparent" style="border: none;">
+            <button onclick="playSound()" class="bg-transparent" style="border: none">
               <i class="bi bi-volume-down-fill"></i>
             </button>
             <div class="wrapper mb-4">
               <img src="./assets/img/goat.png" class="img-thumbnail visually-hidden" id="img" alt="" />
             </div>
             <div class="text mt-4">
-              <h1 class="visually-hidden" style="text-align: center;" id="desc">Kambing</h1>
+              <h1 class="visually-hidden" style="text-align: center" id="desc">Kambing</h1>
             </div>
+            <div class="per-world">Kambing</div>
+            <div class="per-syllable">Kam-bing</div>
           </div>
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
