--- a/page3/ternak.html
+++ b/page3/ternak.html
@@ -23,25 +23,24 @@
               <i class="bi bi-volume-down-fill"></i>
             </button>
             <div class="wrapper mb-4">
-              <img src="./assets/img/goat.png" class="img-thumbnail visually-hidden" id="img" alt="" />
+              <img src="" class="img-thumbnail " id="img" alt="" />
             </div>
             <div class="text mt-4">
-              <h1 class="visually-hidden" style="text-align: center;" id="desc">Kambing</h1>
+              <h1 class="" style="text-align: center;" id="desc"></h1>
             </div>
           </div>
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
           <div class="img-card">
-            <img src="./assets/img/dog.png" class="img-fluid p-1" alt="" />
-            <img src="./assets/img/cat.png" class="img-fluid p-1" alt="" />
-            <img src="./assets/img/goat.png" onclick="showImage()" class="img-fluid p-1" alt="" />
-            <img src="./assets/img/cat.png" class="img-fluid p-1" alt="" />
-            <img src="./assets/img/cow.png" class="img-fluid p-1" alt="" />
+            <img src="./assets/img/dog.png" class="img-fluid p-1 animal" id="dog" alt="" />
+            <img src="./assets/img/cat.png" class="img-fluid p-1 animal" id="cat" alt="" />
+            <img src="./assets/img/goat.png" id="goat" class="img-fluid p-1 animal" alt="" />
+            <img src="./assets/img/cow.png" class="img-fluid p-1 animal" id="cow" alt="" />
           </div>
         </div>
       </div>
     </div>
-    <audio id="audio" src="./assets/sounds/kambing.mpeg"></audio>
+    <audio id="audio" src=""></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
