--- a/page3/ternak.html
+++ b/page3/ternak.html
@@ -28,8 +28,12 @@
             <div class="text mt-4">
               <h1 class="" style="text-align: center;" id="desc"></h1>
             </div>
-            <div class="per-world">Kambing</div>
-            <div class="per-syllable">Kam-bing</div>
+            <div class="per-world" style="text-align: center;">
+              <h1></h1>
+            </div>
+            <div class="per-syllable" style="text-align: center;">
+              <h1></h1>
+            </div>
           </div>
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
