change to elephant

--- a/page3/buas.html
+++ b/page3/buas.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-6 d-flex align-items-center flex-wrap">
           <div class="img-card">
-            <img src="assets/img/crocodile.png" class="img-fluid p-1 animal" id="crocodile" alt="" />
+            <img src="assets/img/elephant.png" class="img-fluid p-1 animal" id="elephant" alt="" />
             <img src="assets/img/lion.png" class="img-fluid p-1 animal" id="lion" alt="" />
             <img src="assets/img/snake.png" class="img-fluid p-1 animal" id="snake" alt="" />
             <img src="assets/img/panda.png" class="img-fluid p-1 animal" id="panda" alt="" />
